fixed some issues regarding the create-block div and improved readability

--- a/style.css
+++ b/style.css
@@ -21,25 +21,6 @@ body {
     margin: 0;
 }
 
-button {
-    width: 100%;
-    height: 50%;
-    border: none;
-    cursor: pointer;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    justify-self: center;
-    align-self: center;
-    background-color: transparent;
-    text-align: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    font-size: 35px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: lighter;
-}
-
 .color-block {
     width: 10%;
     height: 100vh;
@@ -48,6 +29,18 @@ button {
     flex-wrap: wrap;
     flex-direction: column;
     transition: 0.4s ease-in 0.1s, 0.3s ease-out;
+}
+
+.buttons-container {
+    width: 20%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 100;
+    border-left: 10px solid rgb(54, 55, 63);
 }
 
 .color-block:nth-child(1) {
@@ -86,32 +79,44 @@ button {
     background-color: rgb(255, 108, 240);
 }
 
-.color-block:nth-child(10) {
-    background-color: rgb(159, 159, 159);
-    transition: scaleX(1) 0.4s ease-in 0.1s, scale(1) 0.3s ease-out;
+button {
+    width: 100%;
+    height: 50%;
+    border: none;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    background-color: transparent;
+    text-align: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    
 }
 
-.generate-button {
+.generate-colors-container {
     width: 100%;
     height: 50%;
     background-color: rgb(255, 248, 235);
-    color: rgb(223, 223, 223);
-    font-size: 35px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: lighter;
     border: none;
     cursor: pointer;
     transition: 0.3s;
-}
-
-.generate-button:hover {
-    transform: scale(1.1) translateY(-5px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: center;
 }
 
 .generate-colors-text {
     font-size: 35px;
-    color: rgb(208, 208, 208);
+    color: rgb(77, 79, 90);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 35px;
+    font-weight: lighter;
     margin-bottom: 10px;
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
@@ -125,12 +130,35 @@ button {
     text-align: center;
     color: rgb(255, 255, 255);
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
-    cursor:text;
+    cursor: text;
 }
 
-.generate-button:hover .generate-colors-hex {
+.generate-colors-container:hover .generate-colors-hex {
     opacity: 1;
-    transform: scale(1.2) translateY(-5px);
+    transform: scale(1.1) translateY(-5px);
+}
+
+.create-random-color-button{
+    width: 140px;
+    height: 45px;
+    background-color: rgb(255, 248, 235);
+    border: none;
+    cursor: pointer;
+    transition: 0.3s;
+    text-align: center;
+    font-size: 30px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: lighter;
+    background-color: rgb(124, 127, 146);
+    color: rgb(255, 248, 235);
+    border-radius: 4px;
+    margin-top: 20px;
+}
+
+.create-random-color-button:hover {
+    transform: scale(1.05) translateY(-1px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    background-color: rgb(77, 79, 90);
 }
 
 
@@ -158,17 +186,32 @@ button {
 .create-block {
     width: 100%;
     height: 50%;
-    background-color: rgb(64, 64, 83);
-    color: rgb(223, 223, 223);
+    border: none;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    background-color: transparent;
+    text-align: center;
+    flex-direction: column;
+    flex-wrap: wrap;
     font-size: 35px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: lighter;
-    border: none;
-    cursor: pointer;
+    background-color: rgb(77, 79, 90);
     transition: 0.3s;
 }
 
 .create-block:hover {
     transform: scale(1.1) translateY(-5px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
+    box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.8);
+}
+
+.create-block-text {
+    font-size: 30px;
+    color: rgb(255, 248, 235);
+    margin-bottom: 25px;
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
